2008-07-30  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/bugreporter.py:
	* flumotion/common/bundle.py:
	* flumotion/common/bundleclient.py:
	* flumotion/common/common.py:
	* flumotion/common/componentui.py:
	pep8.py:ify

2008-07-30  Johan Dahlin  <johan@flumotion.com>

	* misc/pep8.py:
	Add a script which checks PEP-8 compilance.

2008-07-30  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/avltree.py:
	* flumotion/common/boot.py:
	PEP-8 compilance, run the pep8.py script over this file.

2008-07-30  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Add a Help->Contents menu which launches gnome-help.
	Fixes #1076.

2008-07-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  python-iCalendar is completely optional, not required.

2008-07-30  Johan Dahlin  <johan@flumotion.com>

	* data/glade/sectionwizard.glade:
	* flumotion/common/documentation.py:
	* flumotion/common/planet.py:
	* flumotion/component/producers/soundcard/wizard_gtk.py:
	* flumotion/component/producers/webcam/wizard_gtk.py:
	* flumotion/manager/manager.py:
	* flumotion/ui/wizard.py:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/conversionsteps.py:
	* flumotion/wizard/productionsteps.py:
	* flumotion/wizard/scenarios.py:
	Add a help button to the wizard.
	Add docSection/docAnchor/docVersion class variables for the
	WizardSteps, add a couple of annotations.
	Export a version state variable over pb for the flumotion
	admin client to use.
	Add a new API for creating a link based on just section/anchor/version,
	which does not require a message.
	Fixes #826

2008-07-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	  Change the message about maximum clients to something more
	  friendly, and link to the documentation.  Worked on the first
	  try, whee!

2008-07-30  Thomas Vander Stichele  <thomas at apestaart dot org>
