@@ -493,7 +493,7 @@ class RegistryParser(fxml.Parser):
         return components
 
     def _parseComponent(self, node):
-        # <component type="..." base="..." description="...">
+        # <component type="..." base="..." _description="...">
         #   <source>
         #   <eater>
         #   <feeder>
@@ -504,8 +504,21 @@ class RegistryParser(fxml.Parser):
         #   <wizard>
         # </component>
 
-        componentType, baseDir, description = self.parseAttributes(node,
-            required=('type', 'base'), optional=('description',))
+        # F0.8: remove description, require _description
+        componentType, baseDir, description, _description = \
+            self.parseAttributes(node,
+                required=('type', 'base'),
+                optional=('description', '_description'))
+
+        # intltool-extract only translates attributes starting with _
+        if description:
+            import warnings
+            warnings.warn(
+                "Please change '<component description=...'"
+                " to '<component _description=...' for %s" % componentType,
+                DeprecationWarning)
+        if _description:
+            description = _description
 
         files = []
         source = fxml.Box(None)
@@ -557,9 +570,17 @@ class RegistryParser(fxml.Parser):
         # <property name="..." type="" required="yes/no" multiple="yes/no"/>
         # returns: RegistryEntryProperty
 
+        # F0.8: remove description, require _description
         attrs = self.parseAttributes(node, required=('name', 'type'),
-            optional=('required', 'multiple', 'description'))
-        name, propertyType, required, multiple, description = attrs
+            optional=('required', 'multiple', 'description', '_description'))
+        name, propertyType, required, multiple, description, _d = attrs
+        if description:
+            import warnings
+            warnings.warn("Please change '<property description=...'"
+                " to '<property _description=...' for %s" % name,
+                DeprecationWarning)
+        if _d:
+            description = _d
         # see flumotion.common.config.parsePropertyValue
         allowed = ('string', 'rawstring', 'int', 'long', 'bool',
             'float', 'fraction')
